tests/whiley/invalid/test_172.wyal
define extract_loopinvariant_11(int[] r) is:
    |r| < 2


assert "index out of bounds (not less than length)":
    forall(int[] r$1, int[] ls, int[] r, int i$1, int i):
        if:
            i == 0
            r == [0;0]
            extract_loopinvariant_11(r$1)
            i$1 < |ls|
        then:
            i$1 < |r$1|


